Fixed a lot of CSS issues: Slider Images size problem, form overflowing problem, messy code problem, organized code.

--- a/public/css/members.css
+++ b/public/css/members.css
@@ -13,18 +13,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   background-color: var(--main-color);
   font-family: 'Marcellus SC', serif;
   color: rgb(206, 206, 206);
   margin: 16px;
+  overflow-x: hidden;
 }
 h2 {
-  padding: var(--padding-divs);
-  margin: var(--margin-divs);
+  /* padding: var(--padding-divs); */
+  /* margin: var(--margin-divs); */
   color: white;
-  align-self: start;
   width: 100%;
 }
 a {
@@ -78,6 +77,7 @@ a {
   margin: 16px auto;
   padding: var(--padding-divs);
   height: 90%;
+  flex-wrap: wrap;
 }
 .container-right {
   order: 2;
@@ -89,56 +89,23 @@ a {
 }
 
 /* ===================== LEFT CONTAINER ===================== */
-.user-profile {
-  margin: 16px auto;
-  width: 100%;
-  height: 10%;
-}
-
-/* Characters */
-.char-fav-container {
-  width: 100%;
-  height: 30%;
-  margin: 16px auto;
-}
-.characters, .fav-actions{
-  width: 100%;
-}
-.characters {
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
-  background-color: #4a4a4a;
-  height: 100%;
-}
-.fav-actions {
-  border-top-right-radius: 40px;
-  border-bottom-right-radius: 40px;
-  background-color: #755f79;
-  height: 90%;
-  margin: var(--margin-divs);
-}
-
-/* Chat Room Container */
-.chatroom-form {
+/* Left Container Global */
+.char-fav-container, .chatroom-form {
   width: 100%;
   height: 40%;
-  padding: var(--padding-divs);
+  padding: 32px;
   margin: 16px auto;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
 }
-
-.chatroom, .newSession {
+.characters, .fav-actions, .chatroom, .newSession {
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   width: 50%;
   height: 100%;
+  padding: 32px;
+  margin: auto;
 }
-
-.newSession {
-  border-right: 2px rgb(63, 63, 63) solid;
-}
-
 .form-control  {
   width: 100%;
 }
@@ -146,7 +113,7 @@ a {
   border: 0;
   outline: 0;
   padding: 8px;
-  margin: var(--margin-divs);
+  margin: var(--margin-divs) auto;
   border-radius: 40px;
   text-shadow: 1px 1px 0 #292929;
   background-color: #795e7e;
@@ -165,7 +132,7 @@ a {
 }
 
 input, select {
-  margin: 10px;
+  margin: 10px auto;
   box-shadow: inset 6px 6px 9px #3d3d3d, inset -6px -6px 9px #575757;
   width: 100%;
   transition: 0.5s all;
@@ -179,85 +146,73 @@ input, select {
 input:focus {
   box-shadow: inset 5px 5px 10px #444444, inset -5px -5px 10px #636363;
 }
+/* End of Left Container Global */
 
-/* Game Buttons */
-.game-button {
-  margin: var(--margin-divs);
-  padding: var(--padding-divs);
+.user-profile {
+  margin: 16px auto;
+  padding: var(--margin-divs);
   width: 100%;
   height: 10%;
 }
-.lobby-button {
-  margin: 50px;
-  padding: 0;
-  width: 50%;
-}
-.start-game,
-.join-current {
-  border: 0;
-  outline: 0;
-  margin: 0;
-  padding: 10px;
-  cursor: pointer;
-  width: 100%;
-  color: white;
-}
-.start-game {
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  background-color: #4a4a4a;
-}
-.join-current {
-  background-color: #755f79;
-  margin: 5px;
-}
 .logout {
-  width: 10%;
+  width: fit-content;
   height: auto;
   margin: var(--margin-divs);
-  padding: var(--padding-divs);
+  padding: 16px;
   text-align: center;
+}
+
+/* ======= Characters ======= */
+/* Character Creation */
+.characters {
+  border-right: 2px rgb(63, 63, 63) solid;
+}
+.create-character {
+  justify-content: flex-start;
+  align-items: stretch;
+  width: 100%;
+}
+
+/* Favorite Actions */
+
+/* Chat Room Container */
+.newSession {
+  border-right: 2px rgb(63, 63, 63) solid;
 }
 
 /* ===================== RIGHT CONTAINER ===================== */
 /* Chat Archive Container */
-.chat-container {
+.chat-container, .chat-logbox {
   width: 100%;
+  margin: 16px auto;
+  padding: 32px;
+  border-radius: 45px;
+}
+.chat-container {
   height: 20%;
-  border-bottom: 2px solid rgba(65, 65, 65, 0.5);
-  margin: 0 16px;
-  border-radius: 0;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
+  border-bottom: 2px rgb(63, 63, 63) solid;
 }
 .chat-archive {
   list-style: none;
   text-align: center;
 }
 .chat-logbox {
-  width: 100%;
-  height: 80%;
-  margin: 0 16px;
-  border-radius: 0;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+  height: 40%;
 }
 
-
 /* SLIDER ANIMATION */
-
-/* *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
 .img-slider{
-  position: absolute;
-  width: 800px;
-  height: 450px;
-  margin: 10px;
+  position: relative;
+  width: 100%;
+  height: 40%;
+  margin: 10px auto 16px;
+  padding: 10px;
   /* background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .img-slider .slide{
@@ -265,19 +220,24 @@ input:focus {
   position: absolute;
   width: 100%;
   clip-path: circle(0.0% at 0 50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .img-slider .slide.active{
   clip-path: circle(150% at 0 50%);
   transition: 1s;
   transition-property: clip-path;
-
 }
 
 .img-slider .slide img{
-  z-index: 1;
-  width: 100%;
-  border-radius: 5px;
+  /* z-index: 1; */
+  width: 90%;
+  height: auto;
+  border-radius: 15px;
 }
 
 .img-slider .slide .info{
@@ -306,22 +266,21 @@ input:focus {
   z-index: 2;
   position: absolute;
   display: flex;
+  justify-content: center;
   bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .img-slider .navigation .btn{
   background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   margin: 10px;
   border-radius: 50%;
   cursor: pointer;
 }
 
 .img-slider .navigation .btn.active{
-  background: #2696E9;
+  background: var(--secondary-color);
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
